[gd_scene load_steps=8 format=3 uid="uid://llsuwhbhtkyt"]

[ext_resource type="Script" uid="uid://37jtda7cmeqi" path="res://scenes/enemies/Enemy.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b8rnjwryw6y0e" path="res://scenes/enemies/AnimPrinter.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dp2i42vlnxbk" path="res://scenes/enemies/Sounds/EnemySfx.tscn" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(20, 23.7034)

[sub_resource type="CircleShape2D" id="2"]
radius = 14.0849

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(31.0628, 8.09756)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(170, 24)

[node name="EnemyPrinter" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 14339
script = ExtResource("1")
enemyType = 3
shoot_ability = true
itemType = "impressora"
sfxShoot_sound = "res://assets/Sounds/enemy_sfx/enemy_printer_shoot.mp3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("1")

[node name="Sprite2D" parent="." instance=ExtResource("2")]

[node name="HopTimer" type="Timer" parent="."]
autostart = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(1, 3)
shape = SubResource("2")

[node name="HitArea" type="Area2D" parent="."]
position = Vector2(21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(-18.9924, -11.369)
shape = SubResource("3")

[node name="VisionArea" type="Area2D" parent="."]
position = Vector2(20, -10)
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
light_mask = 0
position = Vector2(80, 0)
shape = SubResource("4")

[node name="DashTimer" type="Timer" parent="."]

[node name="EnemySfx" parent="." instance=ExtResource("3")]

[connection signal="timeout" from="HopTimer" to="." method="_on_HopTimer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered" flags=3]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered" flags=3]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered" flags=3]
[connection signal="body_entered" from="VisionArea" to="." method="_on_VisionArea_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_VisionArea_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
